[package]
name = "ackermann"
version = "0.0.1"
authors = ["Florian Keller <github@floriankeller.de>"]
build = "build.rs"
license = "MIT"

[lib]
name = "ackermann"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.18"

[dependencies]
neon = "0.1.18"
ackermann = { git = "https://github.com/ffflorian/ackermann-rust" }
